--- a/Example_1.html
+++ b/Example_1.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <title>iFSM in action! a Finite State Machine for jQuery</title>
-<script type="text/javascript" src="extlib/jquery-1.10.2.min.js"></script>
-<script type="text/javascript" src="extlib/jquery.dotimeout.js"></script>
-<script type="text/javascript" src="extlib/jquery.attrchange.js"></script>
+<script type="text/javascript" src="jquery-1.10.2.min.js"></script>
+<script type="text/javascript" src="jquery.dotimeout.js"></script>
+<script type="text/javascript" src="jquery.attrchange.js"></script>
 <script type="text/javascript" src="ifsm.js"></script>
 
 <style type="text/css">
@@ -52,7 +52,7 @@ var aStateDefinitionButton = {
 		{
 			enterState : 
 			{
-				init_function					: function (){this.myUIObject.html("on").attr({'class':'on'});}
+				init_function					: function (){this.myUIObject.html("on").attr({'class':'on'});this.opts.counter=3}
 			},
 			exitState : 
 			{
@@ -60,7 +60,13 @@ var aStateDefinitionButton = {
 			},
 			click	:	
 			{
+				process_event_if			: '(this.opts.counter<=0)',
+				propagate_event_on_refused	: 'notReady',
 				next_state					: 'ButtonUnDisplayed'
+			},
+			notReady :
+			{
+				init_function				: function (){this.myUIObject.html(this.opts.counter);this.opts.counter=this.opts.counter-1;}
 			}
 		},
 		ButtonUnDisplayed		: 
