--- a/Example_HSM_calculator.html
+++ b/Example_HSM_calculator.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="UTF-8" />
 <title>iFSM in action! a Finite State Machine for jQuery</title>
-<script type="text/javascript" src="jquery-1.10.2.min.js"></script>
-<script type="text/javascript" src="jquery.dotimeout.js"></script>
-<script type="text/javascript" src="jquery.attrchange.js"></script>
+<script type="text/javascript" src="extlib/jquery-1.10.2.min.js"></script>
+<script type="text/javascript" src="extlib/jquery.dotimeout.js"></script>
+<script type="text/javascript" src="extlib/jquery.attrchange.js"></script>
 <script type="text/javascript" src="ifsm.js"></script>
 
 <style type="text/css">
