--- a/Example_HSM_calculator.html
+++ b/Example_HSM_calculator.html
@@ -7,7 +7,9 @@
 <script type="text/javascript" src="extlib/jquery.dotimeout.js"></script>
 <script type="text/javascript" src="extlib/jquery.attrchange.js"></script>
 <script type="text/javascript" src="ifsm.js"></script>
-
+<!--[if lt IE 9]>
+<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+<![endif]-->
 <style type="text/css">
   html {
     font-family: Helvetica, Arial, sans-serif;
