--- a/Example_HSM_calculator.html
+++ b/Example_HSM_calculator.html
@@ -198,7 +198,8 @@ var PocketCalculator = {
 		{
 			enterState : 
 			{
-				init_function					: function (){this.myUIObject.html('computer on');}
+				init_function			: function (){this.myUIObject.html('computer on');}
+				propagate_event			: 'seton',
 			},
 			delegate_machines	: 
 			{
