--- a/Example_HSM_calculator.html
+++ b/Example_HSM_calculator.html
@@ -198,7 +198,7 @@ var PocketCalculator = {
 		{
 			enterState : 
 			{
-				init_function			: function (){this.myUIObject.html('computer on');}
+				init_function			: function (){this.myUIObject.html('computer on');},
 				propagate_event			: 'seton',
 			},
 			delegate_machines	: 
@@ -214,7 +214,7 @@ var PocketCalculator = {
 		{
 			enterState : 
 			{
-				init_function					: function (){this.myUIObject.html('computer off');}
+				init_function					: function (){this.myUIObject.html('computer off');},
 			},
 			seton	:	
 			{
