--- a/Example_2.html
+++ b/Example_2.html
@@ -362,5 +362,6 @@ $(document).ready(function() {
     <button class="onoff" id="onoff_button4"></button>
     <button class="onoff" id="onoff_button5"></button>
     <p id="info"></p>
+    <p>provided by Intersel</p>
 </body>
 </html>
