--- a/Example_Request.html
+++ b/Example_Request.html
@@ -173,12 +173,8 @@ var aEventButton = {
 }
  
 $(document).ready(function() {
-	var aRequestFSM = new fsm_manager($('#StatesImg'),aRequestStates); //create the machine
-	aRequestFSM.InitManager();
-	 $(".onoff").each(function(){
-		 var aFSM = new fsm_manager($(this),aEventButton,{'MainFSM':aRequestFSM}); //create the machine
-		 aFSM.InitManager();	//start it
-	 });
+	$('#StatesImg').iFSM(aRequestStates);
+	$(".onoff").iFSM(aEventButton,{'MainFSM':$('#StatesImg').getFSM(aRequestStates)}); //create the machine
 	$('#Reset').trigger('click');
 });
  </script>
