--- a/Example_HSM_calculator.html
+++ b/Example_HSM_calculator.html
@@ -6,7 +6,7 @@
 <script type="text/javascript" src="extlib/jquery-1.10.2.min.js"></script>
 <script type="text/javascript" src="extlib/jquery.dotimeout.js"></script>
 <script type="text/javascript" src="extlib/jquery.attrchange.js"></script>
-<script type="text/javascript" src="ifsm.js"></script>
+<script type="text/javascript" src="iFSM.js"></script>
 <!--[if lt IE 9]>
 <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
