--- a/Example_Request.html
+++ b/Example_Request.html
@@ -5,7 +5,7 @@
 <script type="text/javascript" src="extlib/jquery-1.10.2.min.js"></script>
 <script type="text/javascript" src="extlib/jquery.dotimeout.js"></script>
 <script type="text/javascript" src="extlib/jquery.attrchange.js"></script>
-<script type="text/javascript" src="ifsm.js"></script>
+<script type="text/javascript" src="iFSM.js"></script>
 
 <style type="text/css">
   html {
