--- a/Example_PushPopState.html
+++ b/Example_PushPopState.html
@@ -6,7 +6,19 @@
 	<script type="text/javascript" src="extlib/jquery.dotimeout.js"></script>
 	<script type="text/javascript" src="extlib/jquery.attrchange.js"></script>
 	<script type="text/javascript" src="iFSM.js"></script>
-
+	<style type="text/css">
+	  html {
+	    font-family: Helvetica, Arial, sans-serif;
+	  }
+	  body {
+	    padding: 0 10px;
+	  }
+	  pre {
+		font-size: 12px;
+		background-color: black;
+		color: green;
+	  }
+	</style>
     <script type="text/javascript">
     var aStateDefinition = {
         IsDisplayed     : 
@@ -47,8 +59,49 @@
 
     </script>
 </head>
-<body style="margin:100px;">
+<body style="margin:10px;">
+<h1>Tuto Example with a Push/Pop state machine... </h1>
+
     <button id="myButton">Show/Hide Text</button>
     <div id="adiv">a nice text to show the FSM capabilities with PushPop state feature :-)</div>
+    <br><br>
+    <pre>
+    var aStateDefinition = {
+        IsDisplayed     : 
+        {
+            enterState:
+            {
+                init_function: function(){this.opts.aDiv.show();}
+            },
+            click   :   
+            {
+                next_state      : 'IsNotDisplayed',
+                pushpop_state	: 'PushState',
+            }
+        }, 
+        IsNotDisplayed      : 
+        {
+            enterState:
+            {
+                init_function: function(){this.opts.aDiv.hide();}
+            },
+            click   :   
+            {
+                pushpop_state	: 'PopState',
+            }
+        },
+        DefaultState        :
+        {
+            start   :
+            {
+                next_state  : 'IsDisplayed'
+            }
+        }
+    };
+
+	$(document).ready(function() {
+		$('#myButton').iFSM(aStateDefinition,{aDiv:$('#adiv')});
+	});
+	    </pre>
 </body>
 </html>
