--- a/Example_Basic.html
+++ b/Example_Basic.html
@@ -6,7 +6,19 @@
     <script type="text/javascript" src="extlib/jquery.dotimeout.js"></script>
     <script type="text/javascript" src="extlib/jquery.attrchange.js"></script>
     <script type="text/javascript" src="iFSM.js"></script>
-
+	<style type="text/css">
+	  html {
+	    font-family: Helvetica, Arial, sans-serif;
+	  }
+	  body {
+	    padding: 0 10px;
+	  }
+	  pre {
+		font-size: 12px;
+		background-color: black;
+		color: green;
+	  }
+	</style>
     <script type="text/javascript">
     var aStateDefinition = {
         IsDisplayed     : 
@@ -46,7 +58,51 @@
 
     </script>
 </head>
-<body style="margin:100px;">
+<body style="margin:20px;">
     <button id="myButton">I'm Displayed</button>
+    <br><br>
+    <pre>
+var aStateDefinition = {
+    IsDisplayed     : 
+    {
+		enterState:
+        {
+            init_function: function()
+            {
+            	this.myUIObject.html("I'm Displayed");
+            }
+        },
+        click:   
+        {
+            next_state: 'IsNotDisplayed'
+        }
+    }, 
+    IsNotDisplayed      : 
+    {
+        enterState:   
+        {
+            init_function: function()
+            {
+            	this.myUIObject.html("I'm NOT Displayed");
+            }
+        },
+        click:   
+        {
+            next_state: 'IsDisplayed'
+        }
+    },
+    DefaultState        :
+    {
+        start   :
+        {
+            next_state  : 'IsDisplayed'
+        }
+    }
+};
+
+$(document).ready(function() {
+    $('#myButton').iFSM(aStateDefinition);
+});
+    </pre>
 </body>
 </html>
