--- a/Example_Test_Bubbling.html
+++ b/Example_Test_Bubbling.html
@@ -13,8 +13,8 @@
 	  body {
 	    padding: 0 10px;
 	  }
-	  #ButtonContainerNoBubble {font-size: 10px;background-color: #AAA;margin:5px;}
-	  #ButtonContainerBubble {font-size: 10px;background-color: #CCC;width:300px;margin:5px;}
+	  #ButtonContainerNoBubble {font-size: 12px;background-color: #AAA;margin:5px;padding:5px;}
+	  #ButtonContainerBubble {font-size: 12px;background-color: #CCC;width:300px;margin:5px;padding:5px;}
 	  pre {
 		font-size: 12px;
 		background-color: black;
