Examples pushed in a central directory

--- a/Examples/Example_BouncingBall.html
+++ b/Examples/Example_BouncingBall.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>iFSM in action! a Finite State Machine for jQuery</title>
+    <title>iFSM in action! Bouncing Balls... </title>
 	<meta charset="utf-8">
-    <script type="text/javascript" src="extlib/jquery-1.10.2.min.js"></script>
-    <script type="text/javascript" src="extlib/jquery.dotimeout.js"></script>
-    <script type="text/javascript" src="extlib/jquery.attrchange.js"></script>
-    <script type="text/javascript" src='extlib/jcanvas.min.js'></script>
-    <script type="text/javascript" src="iFSM.js"></script>
+    <script type="text/javascript" src="../extlib/jquery-1.10.2.min.js"></script>
+    <script type="text/javascript" src="../extlib/jquery.dotimeout.js"></script>
+    <script type="text/javascript" src="../extlib/jquery.attrchange.js"></script>
+    <script type="text/javascript" src="../extlib/jcanvas.min.js"></script>
+    <script type="text/javascript" src="../iFSM.js"></script>
 	<style type="text/css">
 	  html {
 	    font-family: Helvetica, Arial, sans-serif;
