--- a/Examples/Example_PushPopState.html
+++ b/Examples/Example_PushPopState.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>iFSM in action! a Finite State Machine for jQuery</title>
-	<script type="text/javascript" src="extlib/jquery-1.10.2.min.js"></script>
-	<script type="text/javascript" src="extlib/jquery.dotimeout.js"></script>
-	<script type="text/javascript" src="extlib/jquery.attrchange.js"></script>
-	<script type="text/javascript" src="iFSM.js"></script>
+    <title>iFSM in action! iFSM using push/pop states</title>
+	<script type="text/javascript" src="../extlib/jquery-1.10.2.min.js"></script>
+	<script type="text/javascript" src="../extlib/jquery.dotimeout.js"></script>
+	<script type="text/javascript" src="../extlib/jquery.attrchange.js"></script>
+	<script type="text/javascript" src="../iFSM.js"></script>
 	<style type="text/css">
 	  html {
 	    font-family: Helvetica, Arial, sans-serif;
