--- a/Examples/Example_Request.html
+++ b/Examples/Example_Request.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>iFSM in action! a Finite State Machine for jQuery</title>
-<script type="text/javascript" src="extlib/jquery-1.10.2.min.js"></script>
-<script type="text/javascript" src="extlib/jquery.dotimeout.js"></script>
-<script type="text/javascript" src="extlib/jquery.attrchange.js"></script>
-<script type="text/javascript" src="iFSM.js"></script>
+<title>iFSM in action! a request processing managed with iFSM</title>
+<script type="text/javascript" src="../extlib/jquery-1.10.2.min.js"></script>
+<script type="text/javascript" src="../extlib/jquery.dotimeout.js"></script>
+<script type="text/javascript" src="../extlib/jquery.attrchange.js"></script>
+<script type="text/javascript" src="../iFSM.js"></script>
 
 <style type="text/css">
   html {
@@ -185,11 +185,11 @@ $(document).ready(function() {
 	Then change state by clicking the event you like<br>
 	Then, when finished, you can reset, then do a new "Submit"...</p>  
 	<div id="StatesImg">
-		<img id="original" 	src="img/EnhancementRequest_original.jpg">
-		<img id="submitted" src="img/EnhancementRequest_submitted.jpg">
-		<img id="duplicate" src="img/EnhancementRequest_duplicate.jpg">
-		<img id="opened" 	src="img/EnhancementRequest_opened.jpg">
-		<img id="closed" 	src="img/EnhancementRequest_closed.jpg">
+		<img id="original" 	src="../img/EnhancementRequest_original.jpg">
+		<img id="submitted" src="../img/EnhancementRequest_submitted.jpg">
+		<img id="duplicate" src="../img/EnhancementRequest_duplicate.jpg">
+		<img id="opened" 	src="../img/EnhancementRequest_opened.jpg">
+		<img id="closed" 	src="../img/EnhancementRequest_closed.jpg">
 	</div>
     <h2>Event Buttons:</h2>
     <button class="onoff" id="Reset">Reset</button>
