--- a/Examples/Example_HSM_calculator.html
+++ b/Examples/Example_HSM_calculator.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <meta charset="UTF-8" />
-<title>iFSM in action! a Finite State Machine for jQuery</title>
-<script type="text/javascript" src="extlib/jquery-1.10.2.min.js"></script>
-<script type="text/javascript" src="extlib/jquery.dotimeout.js"></script>
-<script type="text/javascript" src="extlib/jquery.attrchange.js"></script>
-<script type="text/javascript" src="iFSM.js"></script>
+<title>iFSM in action! a simple calculator managed with a FSM</title>
+<script type="text/javascript" src="../extlib/jquery-1.10.2.min.js"></script>
+<script type="text/javascript" src="../extlib/jquery.dotimeout.js"></script>
+<script type="text/javascript" src="../extlib/jquery.attrchange.js"></script>
+<script type="text/javascript" src="../iFSM.js"></script>
 <!--[if lt IE 9]>
 <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
