--- a/Examples/Example_StimultatorSimulator.html
+++ b/Examples/Example_StimultatorSimulator.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>iFSM in action! a Finite State Machine for jQuery</title>
+    <title>iFSM in action! Finite state machines are great for stimulation on simulation :-)</title>
 	<meta charset="utf-8">
-    <script type="text/javascript" src="extlib/jquery-1.10.2.min.js"></script>
-    <script type="text/javascript" src="extlib/jquery.dotimeout.js"></script>
-    <script type="text/javascript" src="extlib/jquery.attrchange.js"></script>
-    <script type="text/javascript" src="iFSM.js"></script>
+    <script type="text/javascript" src="../extlib/jquery-1.10.2.min.js"></script>
+    <script type="text/javascript" src="../extlib/jquery.dotimeout.js"></script>
+    <script type="text/javascript" src="../extlib/jquery.attrchange.js"></script>
+    <script type="text/javascript" src="../iFSM.js"></script>
 	<style type="text/css">
 	  html {
 	    font-family: Helvetica, Arial, sans-serif;
