--- a/Examples/Mastermind.html
+++ b/Examples/Mastermind.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>iFSM in action! a Finite State Machine for jQuery - a Rules Engine...</title>
-	<script type="text/javascript" src="extlib/jquery-1.10.2.min.js"></script>
-	<script type="text/javascript" src="extlib/jquery.dotimeout.js"></script>
-	<script type="text/javascript" src="extlib/jquery.attrchange.js"></script>
-	<script type="text/javascript" src="iFSM.js"></script>
+    <title>iFSM in action! A Mastemind game made with iFSM</title>
+	<script type="text/javascript" src="../extlib/jquery-1.10.2.min.js"></script>
+	<script type="text/javascript" src="../extlib/jquery.dotimeout.js"></script>
+	<script type="text/javascript" src="../extlib/jquery.attrchange.js"></script>
+	<script type="text/javascript" src="../iFSM.js"></script>
 
 <style type="text/css">
   html {
