--- a/Examples/Example_1.html
+++ b/Examples/Example_1.html
@@ -44,7 +44,7 @@
   }
 </style>
 
-<script type="text/javascript">
+<script type="text/javascript" id="iFSMscript">
 
 var aStateDefinitionButton = {
 
@@ -106,5 +106,12 @@ $(document).ready(function() {
     <button class="onoff" id="onoff_button3"></button>
     <button class="onoff" id="onoff_button4"></button>
     <button class="onoff" id="onoff_button5"></button>
+    
+        <br><br>
+	<pre>
+	<script>document.write($('#iFSMscript').html())</script>
+    </pre>
+    <p>iFSM provided by <a href="http://www.intersel.fr">Intersel</a></p>
+
 </body>
 </html>
