--- a/Examples/Example_2.html
+++ b/Examples/Example_2.html
@@ -44,7 +44,7 @@
   }
 </style>
 
-<script type="text/javascript">
+<script type="text/javascript" id="iFSMscript">
 
 var aStateDefinitionButton = {
 
@@ -350,6 +350,11 @@ $(document).ready(function() {
     <button class="onoff" id="onoff_button4"></button>
     <button class="onoff" id="onoff_button5"></button>
     <p id="info"></p>
-    <p>provided by Intersel</p>
+    <p>provided by <a href="http://www.intersel.fr">Intersel</a></p>
+    
+        <br><br>
+	<pre>
+	<script>document.write($('#iFSMscript').html())</script>
+    </pre>
 </body>
 </html>
