--- a/Examples/Example_AnalyseString.html
+++ b/Examples/Example_AnalyseString.html
@@ -48,7 +48,7 @@
 		color: green;
 	  }
 	</style>
-    <script type="text/javascript">
+    <script type="text/javascript" id="iFSMscript">
     var aStateDefinition = {
     	OneB_Algo:
 		{
@@ -343,282 +343,11 @@
     <button id="myButton">Test</button>
     <button id="Reset" onClick="$('#myButton').trigger('ResetOutput');">Reset Output</button>
     <p id="result"></p>
+        <br><br>
+	<pre>
+	<script>document.write($('#iFSMscript').html())</script>
+    </pre>
+    <p>provided by <a href="http://www.intersel.fr">Intersel</a></p>
 
-<pre>
-    var aStateDefinition = {
-    	OneB_Algo:
-		{
-    		delegate_machines	: 
-			{
-				AlgoOneB : 
-				{
-					submachine : 
-					{
-				    	Start     : 
-				        {
-				            'a':
-				            {
-				                next_state: 'Leading',
-				            },
-				            'b':   
-				            {
-				                next_state: 'OneB',
-				            },
-				            '$':   
-				            {
-				            	propagate_event: 'Reject',
-				            },
-				        }, 
-				        Leading      : 
-				        {
-				            'b':   
-				            {
-				                next_state: 'OneB',
-				            },
-				            '$':   
-				            {
-				            	propagate_event: 'Reject',
-				            },
-				        },
-				        
-				        OneB      : 
-				        {
-				            '$':   
-				            {
-				            	propagate_event: 'Good',
-				            },
-					        'b':   
-					        {
-					        	propagate_event: 'Reject',
-					        },
-				        },
-				        DefaultState        :
-				        {
-				        	start:
-				            {
-				                next_state  : 'Start',
-				            },
-				        }
-
-					},
-				},			
-			},	 
-            process:
-            {
-                next_state  : 'Process',
-                pushpop_state: 'PushState',
-            },
-    	},		 
-    	SetAlgoPalindrome:
-		{
-    		delegate_machines	: 
-			{
-    			AlgoPalindrome : 
-				{
-					submachine : 
-					{
-				    	Start     : 
-				        {
-				            '$':   
-				            {
-				            	propagate_event: 'Good',
-				            },
-				            'pop_b':'pop_a',
-				            'pop_a':   
-				            {
-				            	next_state: 'Reject',
-				            },
-				        }, 
-				        'b'		: 
-				        {
-				            'pop_b':
-				            {
-				                pushpop_state: 'PopState',
-				            },
-				            'pop_a':
-				            {
-				            	next_state: 'Reject',
-				            },
-				            '$':   
-				            {
-				            	propagate_event: '$',
-				            	next_state: 'Reject',
-				            },
-				        },
-				        'a'     : 
-				        {
-				            'pop_a':
-				            {
-				                pushpop_state: 'PopState',
-				            },
-				            'pop_b':
-				            {
-				            	next_state: 'Reject',
-				            },
-				            '$':   
-				            {
-				            	propagate_event: '$',
-				            	next_state: 'Reject',
-				            },
-				        },
-				        'Reject':
-				        {
-				            '$':   
-				            {
-				            	propagate_event: 'Reject',
-				            },
-				        },
-				        DefaultState        :
-				        {
-				        	start:
-				            {
-				                next_state  : 'Start',
-				            },
-				            'a':
-				            {
-				            	next_state: 'a',
-				                pushpop_state: 'PushState',
-				            },
-				            'b':
-				            {
-				            	next_state: 'b',
-				                pushpop_state: 'PushState',
-				            },
-				            process:
-				            {
-				            	propagate_event  : 'ProcessPalindromString',
-				            },
-				        }
-
-					},
-				},			
-			},	 
-    	},		 
-        Good      : 
-        {
-            enterState:   
-            {
-                init_function: function()
-                {
-                	this.opts.outputText.html(this.opts.outputText.html()+'> '+this.opts.inputText.val()+':Gooood :-)&lt;br>');
-                },
-                next_state: 'WaitNext',
-            },
-        },
-        Reject      : 
-        {
-        	enterState:   
-            {
-                init_function: function()
-                {
-                	this.opts.outputText.html(this.opts.outputText.html()+'> '+this.opts.inputText.val()+':Rejeeect :-(&lt;br>');
-                },
-                next_state: 'WaitNext',
-            },
-        },
-        Process      : 
-        {
-        	enterState:   
-            {
-                init_function: function()
-                {
-                	var str=this.opts.inputText.val();
-                	if (str =='') return false;
-                	for(var i=0; i&lt;str.length ; i++)
-                	{
-                	    res = str.charAt(i)
-                	    this.trigger(res);
-                	    //alert(res);
-                	} 	
-                	this.trigger('$');
-                },
-                pushpop_state: 'PopState',
-	            next_state_if_error: 'Reject',
-            },
-        },
-        ProcessPalindromString      : 
-        {
-        	enterState:   
-            {
-                init_function: function()
-                {
-                	var str=this.opts.inputText.val();
-                	for(var i=0; i&lt;parseInt(str.length/2) ; i++)
-                	{
-                	    res = str.charAt(i)
-                	    this.trigger(res);
-                	    //alert(res);
-                	} 	
-                	starti=parseInt(str.length/2);
-                	if (str.length % 2 == 1) starti++;
-                	for(var i=starti; i&lt;str.length ; i++)
-                	{
-                	    res = str.charAt(i)
-                	    this.trigger('pop_'+res);
-                	    //alert(res);
-                	} 	
-                	this.trigger('$');
-                },
-                pushpop_state: 'PopState',
-            },
-        },
-
-        WaitNext      : 
-        {
-        	click:
-            {
-        		propagate_event: 'process',
-                pushpop_state: 'PopState',
-            },
-        },
-        
-        DefaultState        :
-        {
-        	click:
-            {
-        		propagate_event: 'process',
-            },
-            ResetOutput:
-            {
-                init_function: function()
-                {
-                	this.opts.outputText.html('');
-                }
-            },
-            ProcessPalindromString:
-            {
-                next_state  : 'ProcessPalindromString',
-                pushpop_state: 'PushState',
-            },
-            SetOneBAlgo:
-            {
-            	next_state: 'OneB_Algo',
-            },
-            SetAlgoPalindrome:
-            {
-            	next_state: 'SetAlgoPalindrome',
-            },
-            Reject:
-            {
-            	next_state: 'Reject',
-                pushpop_state: 'PushState',
-            },
-            Good:
-            {
-            	next_state: 'Good',
-                pushpop_state: 'PushState',
-            },
-            start:
-            {
-            	next_state: 'OneB_Algo',
-            },
-        }
-    };
-
-    $(document).ready(function() {
-        $('#myButton').iFSM(aStateDefinition,{outputText:$('#result'),inputText:$('#aText')});
-    });
-
-</pre>    
 </body>
 </html>
