--- a/Examples/Example_PushPopState.html
+++ b/Examples/Example_PushPopState.html
@@ -19,7 +19,7 @@
 		color: green;
 	  }
 	</style>
-    <script type="text/javascript">
+    <script type="text/javascript" id="iFSMscript">
     var aStateDefinition = {
         IsDisplayed     : 
         {
@@ -64,44 +64,22 @@
 
     <button id="myButton">Show/Hide Text</button>
     <div id="adiv">a nice text to show the FSM capabilities with PushPop state feature :-)</div>
-    <br><br>
-    <pre>
-    var aStateDefinition = {
-        IsDisplayed     : 
-        {
-            enterState:
-            {
-                init_function: function(){this.opts.aDiv.show();}
-            },
-            click   :   
-            {
-                next_state      : 'IsNotDisplayed',
-                pushpop_state	: 'PushState',
-            }
-        }, 
-        IsNotDisplayed      : 
-        {
-            enterState:
-            {
-                init_function: function(){this.opts.aDiv.hide();}
-            },
-            click   :   
-            {
-                pushpop_state	: 'PopState',
-            }
-        },
-        DefaultState        :
-        {
-            start   :
-            {
-                next_state  : 'IsDisplayed'
-            }
-        }
-    };
+        <br><br>
+		<script>
+	function escapeHtml(text) {
+		  var map = {
+		    '&': '&amp;',
+		    '<': '&lt;',
+		    '>': '&gt;',
+		    '"': '&quot;',
+		    "'": '&#039;'
+		  };
 
-	$(document).ready(function() {
-		$('#myButton').iFSM(aStateDefinition,{aDiv:$('#adiv')});
-	});
-	    </pre>
+		  return text.replace(/[&<>"']/g, function(m) { return map[m]; });
+		}
+		document.write(escapeHtml($('#iFSMscript').html()))</script>
+    </pre>
+    <p>provided by <a href="http://www.intersel.fr">Intersel</a></p>
+
 </body>
 </html>
